# 311-NY-Service-Requests-Insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prefect.yaml  pyproject.toml
dashboard/: app.py
dbt_transform/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_transform/models/reporting/: rpt_ny_311_annual_performance.sql  rpt_ny_311_daily_performance.sql  rpt_ny_311_monthly_performance.sql
dbt_transform/models/staging/: schema.yml  sources.yml  stg_ny_311.sql
extract/: web_to_gcs.py
terraform/: main.tf  terrarform.tfvars.example  variables.tf
